# database_agent

./: .gitignore  README.md  example.env  pyproject 2.toml  pyproject.toml
notebooks/: L2_Interacting_with_a_CSV_Data.ipynb  L3_Connecting_to_a_SQL_Database.ipynb  L4_Azure_OpenAI_Function_Calling_Feature.ipynb  README.md
