[tool.poetry]
name = "database_agent"
version = "0.1.0"
description = "DB Agents code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
jupyter = "^1.0.0"
notebook = "^7.2.1"
ipykernel = "^6.29.4"
pyautogen = "^0.2.30"
python-chess = "^1.999"
typing-extensions = "^4.12.2"
langchain = "^0.2.14"
openai = "^1.41.0"
langchain-openai = "^0.1.22"
pyodbc = "^5.1.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"